--- a/public/css.css
+++ b/public/css.css
@@ -5,10 +5,16 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
+    
 }
 
 .list {
     display: flex;
+    border:1px solid #000;
+    width : 25vw;
+    height: 80vh;
     
 }
+
 
